--- a/playpart.html
+++ b/playpart.html
@@ -7,21 +7,24 @@
         <h1>Sravya Vannemreddy acts in a play</h1>
         <h3>An Enemy of the People Act 1</h3>
         <h3>Henrik Ibsen</h3>
-        <p>
-        Mrs. Stockmann (coming forward into the sitting-room). <br/>Ah, good
-evening—is it you? How good of you to come up and see us!
-<p>Peter Stockmann.<br/> I happened to be passing, and so—(looks into the
-    dining-room). But you have company with you, I see.</p>
-<p>Mrs. Stockmann (a little embarrassed). <br/>Oh, no—it was quite by chance
-    he came in. (Hurriedly.) Won't you come in and have something, too?</p>
-<p>Peter Stockmann.<br/> I! No, thank you. Good gracious—hot meat at night!
-    Not with my digestion.</p>
-<p>Mrs. Stockmann.<br/> Oh, but just once in a way—</p>
+        
+        <p> <h6>Mrs. Stockmann</h6> [coming forward into the sitting-room.] <br/>
+        Ah, good evening—is it you? How good of you to come up and see us!</p>
 
-<p>Peter Stockmann.<br/> No, no, my dear lady; I stick to my tea and bread and
-    butter. It is much more wholesome in the long run—and a little more
-    economical, too.</p>
-<p>Mrs. Stockmann (smiling).<br/> Now you mustn't think that Thomas and I are
+<p><h6>Peter Stockmann</h6> I happened to be passing, and so—[looks into the
+    dining-room]. But you have company with you, I see.</p>
+
+<p><h6>Mrs. Stockmann</h6> [a little embarrassed].
+    Oh, no—it was quite by chance he came in. [Hurriedly.] Won't you come in and have something, too?</p>
+
+<p><h6>Peter Stockmann.</p></h6> I! No, thank you. Good gracious—hot meat at night! Not with my digestion.</p>
+
+<p><h6>Mrs. Stockmann.</h6> Oh, but just once in a way—</p>
+
+<p><h6>Peter Stockmann.</h6> No, no, my dear lady; I stick to my tea and bread and
+    butter. It is much more wholesome in the long run—and a little more economical, too.</p>
+
+<p><h6>Mrs. Stockmann</h6> [smiling]. Now you mustn't think that Thomas and I are
     spendthrifts.</p>
     </body>
 </html>
