modified both playpart and ibsen codes

--- a/playpart.html
+++ b/playpart.html
@@ -2,29 +2,35 @@
 <html>
     <head>
         <title>web apps Lab 4</title>
+        <link rel="stylesheet" href="./ibsen.css">
     </head>
     <body>
         <h1>Sravya Vannemreddy acts in a play</h1>
         <h3>An Enemy of the People Act 1</h3>
         <h3>Henrik Ibsen</h3>
-        
-        <p> <h6>Mrs. Stockmann</h6> [coming forward into the sitting-room.] <br/>
-        Ah, good evening—is it you? How good of you to come up and see us!</p>
 
-<p><h6>Peter Stockmann</h6> I happened to be passing, and so—[looks into the
-    dining-room]. But you have company with you, I see.</p>
+        <p> 
+            <h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="direction"[coming forward into the sitting-room.]></p> </br>
+     <p class="speech">  Ah, good evening—is it you? How good of you to come up and see us!</p>
 
-<p><h6>Mrs. Stockmann</h6> [a little embarrassed].
-    Oh, no—it was quite by chance he came in. [Hurriedly.] Won't you come in and have something, too?</p>
+<p><h6 class="PeterStockmann"> Peter Stockmann</h6> <p class="speech" >I happened to be passing, and so—</p> <p class="direction" [looks into the
+    dining-room].></p> But you have company with you, I see.</p>
 
-<p><h6>Peter Stockmann.</p></h6> I! No, thank you. Good gracious—hot meat at night! Not with my digestion.</p>
+<p><h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="direction" [a little embarrassed].></p>
+   <p class="speech"> Oh, no—it was quite by chance he came in.</p> <p class="direction"[Hurriedly.]></p> <p class="speech">Won't you come in and have something, too?</p>
 
-<p><h6>Mrs. Stockmann.</h6> Oh, but just once in a way—</p>
+   </p>
 
-<p><h6>Peter Stockmann.</h6> No, no, my dear lady; I stick to my tea and bread and
-    butter. It is much more wholesome in the long run—and a little more economical, too.</p>
+<p><h6 class="PeterStockmann">Peter Stockmann</h6> <p class="speech"> I! No, thank you. Good gracious—hot meat at night! Not with my digestion.</p></p>
 
-<p><h6>Mrs. Stockmann</h6> [smiling]. Now you mustn't think that Thomas and I are
-    spendthrifts.</p>
+<p><h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="speech"> Oh, but just once in a way—</p></p>
+
+<p><h6 class="PeterStockmann">Peter Stockmann</h6> <p class="speech"> No, no, my dear lady; I stick to my tea and bread and
+    butter. It is much more wholesome in the long run—and a little more economical, too.</p> </p>
+
+<p><h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="direction">[smiling].</p> <p class="speech">Now you mustn't think that Thomas and I are
+    spendthrifts.</p> </p>
+
+</p>
     </body>
 </html>
