modified two codes

--- a/playpart.html
+++ b/playpart.html
@@ -10,25 +10,25 @@
         <h3>Henrik Ibsen</h3>
 
         <p> 
-            <h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="direction"[coming forward into the sitting-room.]></p> </br>
+            <h5 class="Mrs_Stockmann">Mrs Stockmann</h5> <p class="direction">[coming forward into the sitting-room.]</p> </br>
      <p class="speech">  Ah, good evening—is it you? How good of you to come up and see us!</p>
 
-<p><h6 class="PeterStockmann"> Peter Stockmann</h6> <p class="speech" >I happened to be passing, and so—</p> <p class="direction" [looks into the
-    dining-room].></p> But you have company with you, I see.</p>
+<p><h5 class="PeterStockmann"> Peter Stockmann</h5></p> <p class="speech">I happened to be passing, and so—</p> <p class="direction"> [looks into the
+    dining-room].</p> <p class="speech">But you have company with you, I see.</p>
 
-<p><h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="direction" [a little embarrassed].></p>
-   <p class="speech"> Oh, no—it was quite by chance he came in.</p> <p class="direction"[Hurriedly.]></p> <p class="speech">Won't you come in and have something, too?</p>
+<p><h5 class="Mrs_Stockmann">Mrs Stockmann</h5></p> <p class="direction"> [a little embarrassed].</p>
+   <p class="speech"> Oh, no—it was quite by chance he came in.</p> <p class="direction">[Hurriedly.]</p> <p class="speech">Won't you come in and have something, too?</p>
 
-   </p>
+   
 
-<p><h6 class="PeterStockmann">Peter Stockmann</h6> <p class="speech"> I! No, thank you. Good gracious—hot meat at night! Not with my digestion.</p></p>
+<p><h5 class="PeterStockmann">Peter Stockmann</h5></p> <p class="speech"> I! No, thank you. Good gracious—hot meat at night! Not with my digestion.</p>
 
-<p><h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="speech"> Oh, but just once in a way—</p></p>
+<p><h5 class="Mrs_Stockmann">Mrs Stockmann</h5> <p class="speech"> Oh, but just once in a way—</p></p>
 
-<p><h6 class="PeterStockmann">Peter Stockmann</h6> <p class="speech"> No, no, my dear lady; I stick to my tea and bread and
+<p><h5 class="PeterStockmann">Peter Stockmann</h5> <p class="speech"> No, no, my dear lady; I stick to my tea and bread and
     butter. It is much more wholesome in the long run—and a little more economical, too.</p> </p>
 
-<p><h6 class="Mrs_Stockmann">Mrs Stockmann</h6> <p class="direction">[smiling].</p> <p class="speech">Now you mustn't think that Thomas and I are
+<p><h5 class="Mrs_Stockmann">Mrs Stockmann</h5> <p class="direction">[smiling].</p> <p class="speech">Now you mustn't think that Thomas and I are
     spendthrifts.</p> </p>
 
 </p>
