added the styles borders for tables

--- a/playpart.html
+++ b/playpart.html
@@ -32,5 +32,50 @@
     spendthrifts.</p> </p>
 
 </p>
+</pre>
+<style>
+    table, th, td {
+        width: 40%;
+      border: 2px solid white;
+      border-collapse: collapse;
+    }
+    table {
+  border-spacing: 70px;
+}
+    th, td {
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  padding-right: 40px;
+}
+    th {
+  text-align: middle;
+}
+    th {
+      background-color: LightSeaGreen;
+    }
+    td {
+        text-align: right;
+      background-color: cornflowerblue;
+    }
+    </style>
+<table>
+    <tr>
+        <th>Character</th>
+        <th>Actor</th>
+        <th>Understudy</th>
+    </tr>
+    <tr>
+        <td>PeterStockmann</td>
+        <td>Sravya</td>
+        <td>Sri</td>
+    </tr>
+    <tr>
+        <td>Mrs_Stockmann</td>
+        <td>Kalyan</td>
+        <td>Vinay</td>
+    </tr>
+</table>
+
     </body>
 </html>
