added secondact file

--- a/secondact.html
+++ b/secondact.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>web apps Lab 4</title>
-        <link rel="stylesheet" href="./ibsen.css">
-    </head>
-    <body>
-        <h1>Sravya Vannemreddy acts in a play</h1>
-        <h3>An Enemy of the People Act 1</h3>
-        <h3>Henrik Ibsen</h3>
+        <body>
+            <h3>a smidgeon more</h3>
 
         <p> 
             <h5 class="Mrs_Stockmann">Mrs Stockmann</h5> <p class="direction">[coming forward into the sitting-room.]</p> </br>
@@ -33,48 +28,7 @@
 
 </p>
 </pre>
-<style>
-    table, th, td {
-        width: 40%;
-      border: 2px solid white;
-      border-collapse: collapse;
-    }
-    table {
-  border-spacing: 70px;
-}
-    th, td {
-  padding-top: 10px;
-  padding-bottom: 20px;
-  padding-left: 30px;
-  padding-right: 40px;
-}
-    th {
-  text-align: middle;
-}
-    th {
-      background-color: LightSeaGreen;
-    }
-    td {
-        text-align: right;
-      background-color: cornflowerblue;
-    }
-    </style>
-<table>
-    <tr>
-        <th>Character</th>
-        <th>Actor</th>
-        <th>Understudy</th>
-    </tr>
-    <tr>
-        <td>PeterStockmann</td>
-        <td>Sravya</td>
-        <td>Sri</td>
-    </tr>
-    <tr>
-        <td>Mrs_Stockmann</td>
-        <td>Kalyan</td>
-        <td>Vinay</td>
-    </tr>
-</table>
-    </body>
+link to playpart file <a href="playpart.html"> Playpart.html</a>
+        </body>
+    </head>
 </html>
