added the hover style border to seconmdact file

--- a/secondact.html
+++ b/secondact.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./ibsen.css">
+    </head>
         <body>
+            
             <h3>a smidgeon more</h3>
 
         <p> 
@@ -30,5 +33,5 @@
 </pre>
 link to playpart file <a href="playpart.html"> Playpart.html</a>
         </body>
-    </head>
+    
 </html>
